<resources>
    <string name="app_id">ca-app-pub-3964769880255604~4703492925</string>
    <string name="admob_banner_id">ca-app-pub-3964769880255604/4259326711</string>
    <string name="admob_popup_id">ca-app-pub-3964769880255604/6502346678</string>

    <string name="app_name" translatable="false">Sudoku</string>
    <string name="title_activity_game_view" translatable="false">Sudoku</string>

    <string name="cancel">Cancel</string>

    <!-- ###MAIN MENU### -->
    <string name="new_game">New Game</string>
    <string name="menu_main">Main Menu</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_highscore">Highscore</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_reset">Reset Board</string>
    <string name="menu_continue_game">Continue Game</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="generating">Generating new level in the background&#8230;</string>

    <!-- ###SETTINGS### -->
    <string name="title_activity_settings">Settings</string>
    <!-- #Highlight -->
    <string name="pref_group_highlight_selection">Selection highlight</string>
    <string name="pref_highlight_connected">Connected Fields</string>
    <string name="pref_group_highlight_value">Value highlight</string>
    <string name="pref_highlight_vals">Same values</string>
    <string name="pref_highlight_notes">Notes</string>
    <!-- #Game -->
    <string name="pref_header_game">Game</string>
    <string name="pref_group_game">Game settings</string>
    <string name="pref_symbols">Symbols</string>
    <array name="pref_symbols_list_titles">
        <item>Default 1,2,3,..</item>
        <item>Roman I,II,III,..</item>
        <item>Fancy ♪,♫,☼,..</item>
        <item>Chinese 一,二,三,..</item>
        <item>Greek α,β,γ,..</item>
        <item>Indian १,२,३,..</item>
    </array>
    <array name="pref_symbols_list_values">
        <item>Default</item>
        <item>Roman</item>
        <item>Fancy</item>
        <item>Chinese</item>
        <item>Greek</item>
        <item>Indian</item>
    </array>
    <string name="pref_automatic_note_deletion">Note deletion</string>
    <string name="pref_automatic_note_deletion_summary">Automatically remove notes when setting values on connected cells</string>
    <string name="pref_timer_reset">Timer Reset</string>
    <string name="pref_timer_reset_summary">Also reset the timer, when resetting the game board.</string>

    <!-- ###GameDifficulty### -->
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_moderate">Moderate</string>
    <string name="difficulty_hard">Hard</string>

    <!--###GameActivity -->
    <string name="Sudoku" translatable="false">Sudoku</string>
    <string name="gametype_default_9x9" translatable="false">Sudoku 9x9</string>
    <string name="gametype_default_6x6" translatable="false">Sudoku 6x6</string>
    <string name="gametype_unspecified">Unspecified</string>
    <string name="gametype_default_12x12" translatable="false">Sudoku 12x12</string>
    <string name="gametype_x_9x9" translatable="false">X Sudoku 9x9</string>
    <string name="gametype_hyper_9x9" translatable="false">Hyper Sudoku 9x9</string>
    <string name="hint_usage">Select a valid field and then press the hint button to reveal the solution.</string>
    <string name="hint_confirmation">Are you sure you want to use this hint? When using hints, you will not be able to achieve a personal best time.</string>
    <string name="hint_confirmation_confirm">Use</string>
    <string name="reset_confirmation">Are you sure you want to reset the game board?</string>
    <string name="reset_confirmation_confirm">Reset</string>

    <!-- ### Welcome Dialog ### -->

    <!-- ### Continue Game ### -->
    <string name="loadgame_delete_confirmation">Are you sure you want to delete this save?</string>
    <string name="loadgame_delete_confirm">Delete</string>

    <!-- ### Stats ###-->
    <string name="number_of_hints"># used hints:</string>
    <string name="number_of_games"># completed games:</string>
    <string name="total_of_time">Total time played:</string>
    <string name="average_time">Ø-time:</string>
    <string name="min_time">Best time:</string>
    <string name="reset_stats">Reset All</string>

    <!--### Win Strings -->
    <string name="win_text">Congratulations!</string>
    <string name="win_button_text">Continue</string>
    <string name="title_activity_help">Help</string>
    <string name="win_time">Time:</string>
    <string name="win_hint">Hints:</string>
    <string name="win_show_game">Show gamefield</string>
    <string name="win_best_time">New record!</string>

    <!-- ### HELP prefs ###-->
    <string name="help_keyboard">Keyboard</string>
    <string name="help_keyhighlighted_summary">Indicates that the value is selected. Values are set directly when touching fields in this mode, without selecting the field.</string>
    <string name="help_keyhighlighted_yellow_summary">Indicates that the correct number of values for this number have been placed.</string>

    <!-- ### Special buttons description ###-->
    <string name="help_do">Do button</string>
    <string name="help_do_summary">Redoes the last undone action</string>
    <string name="help_undo">Undo button</string>
    <string name="help_undo_summary">Undoes the last action</string>
    <string name="help_hint">Hint button</string>
    <string name="help_hint_summary">Unveals the selected field\nWarning: When used, the current game can not count towards a new best time.</string>
    <string name="help_delete">Delete button</string>
    <string name="help_delete_summary">Deletes a selected field</string>
    <string name="help_notes">Note toggle button</string>
    <string name="help_notes_summary">Toggles if numbers should be set as notes or as values in a field</string>
    <string name="okay">Okay</string>
    <string name="difficulty_challenge">Challenge</string>
    <string name="pref_highlightInputError" translatable="false">Highlight input mistakes</string>
    <string name="pref_keep_screen_on">Keep Screen On</string>
    <string name="pref_keep_screen_on_summary">Don\'t turn the screen off while playing</string>
    <string name="str_di_lai">Undo</string>
    <string name="str_xoa">Erase</string>
    <string name="str_but_chi">Pencil</string>
    <string name="str_goi_y">suggest</string>
    <string name="str_setting">Setting</string>
    <string name="str_statitic">statistic</string>
    <string name="str_guild">how to play</string>
    <string name="str_help">Help</string>
    <string name="str_policy">Terms of service</string>
    <string name="str_privacy">Privacy policy</string>
    <string name="str_new_game">new game</string>
    <string name="str_xoa_tien_trinh">This game can be reset!</string>
    <string name="str_thu_thach">Daily Quest</string>
    <string name="str_easy">Easy</string>
    <string name="str_normal">Normal</string>
    <string name="str_lv_expert">LV_EXPERT</string>
    <string name="str_lv_hard">LV_HARD</string>
    <string name="str_lv_normal">LV_NORMAL</string>
    <string name="str_lv_easy">LV_EASY</string>
    <string name="str_hard">Hard</string>
    <string name="str_expert">Expert</string>
    <string name="str_reset">Reset</string>
    <string name="error_number_1_3">Error Number 1/3</string>

</resources>
