<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:text="@string/str_xoa_tien_trinh"/>


    <LinearLayout
        android:id="@+id/viewDailyQuest"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:src="@mipmap/ic_trophy_2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/str_thu_thach" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/viewEasyQuest"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_marginRight="20dp"
            android:src="@mipmap/ic_easy"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/str_easy" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/viewNormalQuest"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_marginRight="20dp"
            android:src="@mipmap/ic_normal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/str_normal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/viewHardQuest"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_marginRight="20dp"
            android:src="@mipmap/ic_hard"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="Khó" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/viewExpertQuest"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_marginRight="20dp"
            android:src="@mipmap/ic_expert"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="Chuyên gia" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/viewReset"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_marginRight="20dp"
            android:src="@mipmap/ic_refresh"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="Chơi lại" />
    </LinearLayout>
</LinearLayout>
